Update GetQuizzesByCategory API
